# edstem-cli

./: CHANGELOG.md  README.md  SKILL.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish-clawhub.yml  publish.yml  release.yml
edstem_cli/: __init__.py  auth.py  cli.py  client.py  config.py  constants.py  filter.py  formatter.py  models.py  self_update.py  serialization.py  skill_bundle.py
tests/: conftest.py  test_auth.py  test_cli.py  test_cli_update.py  test_client.py  test_config.py  test_config_normalization.py  test_filter.py  test_formatter.py  test_parser_fixtures.py  test_self_update.py  test_serialization.py  test_skill_bundle.py
tests/fixtures/: course_threads.json  thread_detail.json  user_activity.json  user_info.json
twitter_cli/: auth.py  cli.py  client.py  constants.py
